{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 48,
  "lineage": "58da4245-776c-31db-d645-3dd58262bd90",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656288353549:security-group/sg-0235118fb7f34b60a",
            "description": "Security group for Qdrant database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0235118fb7f34b60a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Qdrant REST API port 6333",
                "from_port": 6333,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f2e9ef3da7335de"
                ],
                "self": false,
                "to_port": 6333
              },
              {
                "cidr_blocks": [],
                "description": "Qdrant gRPC port 6334",
                "from_port": 6334,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f2e9ef3da7335de"
                ],
                "self": false,
                "to_port": 6334
              }
            ],
            "name": "nexlify-database-sg",
            "name_prefix": "",
            "owner_id": "656288353549",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "RAG-AI-Chatbot",
              "ManagedBy": "Terraform",
              "Name": "nexlify-database-sg",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Purpose": "Database security group"
            },
            "tags_all": {
              "Application": "RAG-AI-Chatbot",
              "ManagedBy": "Terraform",
              "Name": "nexlify-database-sg",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Purpose": "Database security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-097f19de1cf77845d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web_app_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656288353549:security-group/sg-01f2e9ef3da7335de",
            "description": "Security group for FastAPI and web applications",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f2e9ef3da7335de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Agentic AI application port 8000",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Data Ingestion service port 7860",
                "from_port": 7860,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7860
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nexlify-web-app-sg",
            "name_prefix": "",
            "owner_id": "656288353549",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "RAG-AI-Chatbot",
              "ManagedBy": "Terraform",
              "Name": "nexlify-web-app-sg",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Purpose": "Web application security group"
            },
            "tags_all": {
              "Application": "RAG-AI-Chatbot",
              "ManagedBy": "Terraform",
              "Name": "nexlify-web-app-sg",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Purpose": "Web application security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-097f19de1cf77845d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656288353549:network-acl/acl-019a670dfff1e5adc",
            "default_network_acl_id": "acl-019a670dfff1e5adc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-019a670dfff1e5adc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "656288353549",
            "subnet_ids": [
              "subnet-04a3185d610583124",
              "subnet-08f8dffe06064e3ce",
              "subnet-0c662e94b21e22c5b",
              "subnet-0de20484d7efd75ba"
            ],
            "tags": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-vpc",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-vpc",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "vpc_id": "vpc-097f19de1cf77845d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656288353549:route-table/rtb-021be7b759237dd57",
            "default_route_table_id": "rtb-021be7b759237dd57",
            "id": "rtb-021be7b759237dd57",
            "owner_id": "656288353549",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-vpc",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-vpc",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-097f19de1cf77845d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656288353549:security-group/sg-0ffde4fc8f6006ca3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ffde4fc8f6006ca3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "656288353549",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-vpc",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-vpc",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "vpc_id": "vpc-097f19de1cf77845d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fcb694a1ec2acb2b",
            "arn": "arn:aws:ec2:ap-south-1:656288353549:elastic-ip/eipalloc-0fcb694a1ec2acb2b",
            "domain": "vpc",
            "id": "eipalloc-0fcb694a1ec2acb2b",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-235-21-126.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.21.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-vpc",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-vpc",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656288353549:internet-gateway/igw-0fb5c2c68fd88276e",
            "id": "igw-0fb5c2c68fd88276e",
            "owner_id": "656288353549",
            "tags": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-igw",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-igw",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "vpc_id": "vpc-097f19de1cf77845d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fcb694a1ec2acb2b",
            "association_id": "eipassoc-0ae6970343148762f",
            "connectivity_type": "public",
            "id": "nat-00ce3b330ddf9b39e",
            "network_interface_id": "eni-073ede924d35c1879",
            "private_ip": "10.0.1.76",
            "public_ip": "13.235.21.126",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-020fd1212a6d9a334",
            "tags": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-nat-gateway",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-nat-gateway",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0494f4e0be28587571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00ce3b330ddf9b39e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0494f4e0be2858757",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fb5c2c68fd88276e",
            "id": "r-rtb-0ab512fc58fbb46531080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ab512fc58fbb4653",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656288353549:route-table/rtb-0494f4e0be2858757",
            "id": "rtb-0494f4e0be2858757",
            "owner_id": "656288353549",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-vpc",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-vpc",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-097f19de1cf77845d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656288353549:route-table/rtb-0ab512fc58fbb4653",
            "id": "rtb-0ab512fc58fbb4653",
            "owner_id": "656288353549",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fb5c2c68fd88276e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-vpc",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-vpc",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-097f19de1cf77845d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07593929e41b0f82c",
            "route_table_id": "rtb-0494f4e0be2858757",
            "subnet_id": "subnet-04496f04fbd3e5952"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cae2130ef121ef70",
            "route_table_id": "rtb-0494f4e0be2858757",
            "subnet_id": "subnet-07844b1d444c3635e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055b741e4c4666442",
            "route_table_id": "rtb-0ab512fc58fbb4653",
            "subnet_id": "subnet-020fd1212a6d9a334"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072cb0c1b31da7ce3",
            "route_table_id": "rtb-0ab512fc58fbb4653",
            "subnet_id": "subnet-0f0e22da5b3e9365a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656288353549:subnet/subnet-04496f04fbd3e5952",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04496f04fbd3e5952",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656288353549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-private-subnet",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true",
              "Type": "private"
            },
            "tags_all": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-private-subnet",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true",
              "Type": "private"
            },
            "vpc_id": "vpc-097f19de1cf77845d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656288353549:subnet/subnet-07844b1d444c3635e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07844b1d444c3635e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656288353549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-private-subnet",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true",
              "Type": "private"
            },
            "tags_all": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-private-subnet",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true",
              "Type": "private"
            },
            "vpc_id": "vpc-097f19de1cf77845d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656288353549:subnet/subnet-020fd1212a6d9a334",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020fd1212a6d9a334",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656288353549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-public-subnet",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true",
              "Type": "public"
            },
            "tags_all": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-public-subnet",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true",
              "Type": "public"
            },
            "vpc_id": "vpc-097f19de1cf77845d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656288353549:subnet/subnet-0f0e22da5b3e9365a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0e22da5b3e9365a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656288353549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-public-subnet",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true",
              "Type": "public"
            },
            "tags_all": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-public-subnet",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true",
              "Type": "public"
            },
            "vpc_id": "vpc-097f19de1cf77845d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656288353549:vpc/vpc-097f19de1cf77845d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019a670dfff1e5adc",
            "default_route_table_id": "rtb-021be7b759237dd57",
            "default_security_group_id": "sg-0ffde4fc8f6006ca3",
            "dhcp_options_id": "dopt-050ebc9873af9ce81",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097f19de1cf77845d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021be7b759237dd57",
            "owner_id": "656288353549",
            "tags": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-vpc",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "RAG-AI-Chatbot",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "nexlify-vpc",
              "Owner": "DevOps",
              "Project": "Nexlify",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}